Fix rank plus background gap

--- a/public/resources/scss/stats.scss
+++ b/public/resources/scss/stats.scss
@@ -482,7 +482,7 @@
       z-index: -1;
       position: absolute;
       top: 0;
-      bottom: 0;
+      bottom: -4px;
       left: -7px;
       right: 0;
       transform: skew(-20deg);
